# ppa-maxent

./: .gitignore  README.md  README.txt  main.py  pyproject.toml  requeriments.txt  requirements.txt
src/ppa_maxent/: cli.py
src/ppa_maxent/core/: functionals.py  kernels.py
src/ppa_maxent/experiments/: demo_phantom.py
src/ppa_maxent/operators/: fft_conv2d.py
src/ppa_maxent/solvers/: maxent_icf.py
src/ppa_maxent/utils/: metrics.py  plotting.py
